# LeanRustLisp

./: ._LeanRustLisp Development Guide.rtf  ._LeanRustLisp Development Guide.txt  ._target  .gitignore  404.html  AGENTS.md  CLAUDE.md  Cargo.toml  GEMINI.md  LICENSE  LeanRustLisp Development Guide.rtf  LeanRustLisp Development Guide.txt  README.md  codegen_output.txt  erasure_output.txt  generic_test  history.txt  index.html  mkdocs.yml  red_team_mode_a_parallel_streams.md  red_team_mode_a_report.md  red_team_mode_a_report_2026-02-02.md  red_team_mode_a_report_2026-02-02_round2.md  red_team_mode_a_report_2026-02-02_round3.md  red_team_mode_a_report_2026-02-02_round4.md  red_team_mode_a_report_2026-02-03_round1.md  red_team_mode_a_report_2026-02-03_round10.md  red_team_mode_a_report_2026-02-03_round2.md  red_team_mode_a_report_2026-02-03_round3.md  red_team_mode_a_report_2026-02-03_round4.md  red_team_mode_a_report_2026-02-03_round5.md  red_team_mode_a_report_2026-02-03_round6.md  red_team_mode_a_report_2026-02-03_round7.md  red_team_mode_a_report_2026-02-03_round8.md  red_team_mode_a_report_2026-02-03_round9.md  red_team_mode_a_report_2026-02-04_fresh.md  red_team_mode_a_report_2026-02-04_round11.md  red_team_mode_a_report_2026-02-04_round12.md  red_team_mode_a_report_2026-02-04_round13.md  red_team_mode_a_report_2026-02-04_round14.md  (+13 more)
cli/: Cargo.toml
cli/src/: compiler.rs  driver.rs  expand.rs  lib.rs  main.rs  package_manager.rs  repl.rs
cli/tests/: auto_backend_fallback.rs  auto_stress_regressions.rs  backend_conformance.rs  borrow_surface.rs  diagnostic_spans.rs  (+27 more)
(+699 files in other folders)
