[workspace]
resolver = "2"

members = [
    # "kernel",
    "kernel",
    "frontend", "cli", "codegen",
    # "elaborator",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["LeanRustLisp Developers"]
license = "Apache-2.0 OR MIT"
repository = "https://github.com/leanrustlisp/leanrustlisp"
