[package]
name = "cli"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
rustyline = "12.0"
anyhow = "1.0"
frontend = { path = "../frontend" }
kernel = { path = "../kernel" }
codegen = { path = "../codegen" }
mir = { path = "../mir" }
ariadne = "0.4.0"
