[package]
name = "cli"
version = "0.1.0"
edition = "2021"

[lib]
name = "cli"
path = "src/lib.rs"

[[bin]]
name = "cli"
path = "src/main.rs"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
rustyline = "12.0"
anyhow = "1.0"
frontend = { path = "../frontend" }
kernel = { path = "../kernel" }
mir = { path = "../mir" }
ariadne = "0.4.0"

[dev-dependencies]
insta = { version = "1.34", features = ["glob"] }
glob = "0.3"
kernel = { path = "../kernel", features = ["test-support"] }
